--- a/assets/header.css
+++ b/assets/header.css
@@ -31,7 +31,7 @@ display: inline-flex;
     text-transform: uppercase;
 }
 
-.menu>li>a:hover , .submenu>li:hover>a, .submenu-special>li:hover{
+.submenu>li>a:hover, .submenu-2>li>a:hover, .submenu-3>li>a:hover{
     opacity: 0.7;
     background-color:  #0755c6;
 }
@@ -71,26 +71,36 @@ display: inline-flex;
     padding-right: 60px;
 }
 
-.menu li:hover .submenu, .submenu li:hover .submenu-special {
-    display: block;
+.menu li:hover .submenu, .submenu li:hover .submenu-2, .special-li:hover .submenu-3{
+    display: list-item;
 }
 
-.submenu-special{
+.submenu-2{
     position:absolute;
     top: 0px;
     left: 100%;
-    width: 150%;
+    width: 140%;
+    text-align: justify;
     background-color:  #0755c6;
     border-bottom: 1px solid rgba(255, 255, 255, 0.07); 
     display: none;
 }
-.submenu-special li a{
+.submenu-2 li a{
     display: grid;
-    grid-template-columns: auto; /* Mỗi thẻ a chiếm toàn bộ dòng */
+    grid-template-columns: auto; 
 
 }
 .sub-menu{
     position: relative;
+}
+
+.submenu-3{
+    position: absolute;
+    left: 100%;
+    top: 0;
+    background-color: #0755c6;
+    width: 100%;
+    display: none;
 }
 
 
